k8s/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openuba-operator
  namespace: openuba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openuba-operator
  template:
    metadata:
      labels:
        app: openuba-operator
    spec:
      serviceAccountName: openuba-operator
      containers:
        - name: operator
          image: openuba-operator:latest
          imagePullPolicy: IfNotPresent
